--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -6,11 +6,11 @@
 
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="26" />
 
-    <application
+    <application>
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/GdxTheme" >
+        android:theme="@style/GdxTheme"
         <activity
             android:name="ninja.trek.android.AndroidLauncher"
             android:label="@string/app_name" 
